<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="G_OPC" Id="{b72851b5-2aab-4c15-b01a-174d2c8931ac}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	// System Values 
	fTime					: LREAL; // [s]
	fPs 					: ST_Filter; // [Bar]
	fErrorOne				: LREAL; // []
	fSignalOne				: LREAL; // [-1, 1]
	fErrorTwo				: LREAL; // []
	fSignalTwo				: LREAL; // [-1, 1]
	
	// MAIN Values
	fMainPaDCV				: ST_Filter; // [Bar]
	fMainPbDCV				: ST_Filter; // [Bar]
	fMainPaCyl				: ST_Filter; // [Bar]
	fMainPistonPosition 	: LREAL; // [m]
	
	// JIB Values
	fJibPaDCV				: ST_Filter; // [Bar]
	fJibPbDCV				: ST_Filter; // [Bar]
	fJibPaCyl				: ST_Filter; // [Bar]
	fJibPbCyl				: ST_Filter; // [Bar]
	fJibPistonPosition		: LREAL; // [m]
	
	// WINCH Values
	fWinchPa				: ST_Filter; // [Bar]
	fWinchPb				: ST_Filter; // [Bar]
	fWinchDistance			: LREAL; // [m]
	
	
	// Joystick Signals
	fJoystickWinch			: LREAL; // [-1, 1]
	fJoystickRotation		: LREAL; // [-1, 1]
	fJoystickMain			: LREAL; // [-1, 1]
	fJoystickJib			: LREAL; // [-1, 1]
	fJoystickExtrude		: LREAL; // [-1, 1]
	
	// Valve Signals
	fValveOneOutput			: LREAL; // [-1, 1]
	fValveOneFF				: LREAL; // [-1, 1]
	fValveOnePID			: LREAL; // [-1, 1]
	
	fValveTwoOutput			: LREAL; // [-1, 1]
	fValveTwoFF				: LREAL; // [-1, 1]
	fValveTwoPID			: LREAL; // [-1, 1]
	
	// Motion Ref
	fXRef					: LREAL; // [m]
	fXDotRef				: LREAL; // [m/s]

END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>